--- a/thuzioapp/static/thuzioapp/css/index.css
+++ b/thuzioapp/static/thuzioapp/css/index.css
@@ -1,21 +1,20 @@
-#products-container {
-	float: left;
+#index-container {
 	display: block;
-	width: 100%;
+	padding-right: 20px; 
+  	padding-left: 20px;
 }
 
-/*#index-top-container {
-	position: absolute;
-	height: 30%;
+#products-container {
+	display: block;
 	width: 100%;
-	border: 1px solid blue;
-}*/
-
+	margin-left: auto;
+	margin-right: auto;
+}
 
 .product-box {
-	float: left;
+	display: inline-block;
+	height: 50%;
 	width: 30%;
-	height: 30%;
 	border: 1px solid black;
 	padding: 10px;
 	margin: 5px;
@@ -32,9 +31,9 @@
 }
 
 .pagination {
-	border: 1px solid black;
 	position: relative;
 	width: 100%;
+	text-align: center;
 	height: 30px;
-	bottom: 10px;
+	bottom: 20px;
 }
