--- a/thuzioapp/static/thuzioapp/css/main.css
+++ b/thuzioapp/static/thuzioapp/css/main.css
@@ -9,17 +9,22 @@ body {
 
 body {
   padding-top: 70px;
+  padding-bottom: 70px;
 }
+
 footer {
 	color: white;
 	background-color: black;
 	position: fixed;
 	bottom: 0px;
-  	border-top: 1px solid blue;
   	width: 100%;
   	height: 30px;
   	line-height: 30px;
   	padding: 0 10px 0 10px;
+}
+
+.container-fluid {
+  padding: 20px;
 }
 
 #login-status {
