new imgs for products, some css for index and details, about to add timestamp to models

--- a/thuzioapp/static/thuzioapp/css/index.css
+++ b/thuzioapp/static/thuzioapp/css/index.css
@@ -18,10 +18,13 @@
 	border: 1px solid black;
 	padding: 10px;
 	margin: 5px;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .product-box img {
-	width: 100%;
+	width: 300px;
+	height: 200px;
 	display: block;
 	margin: 5px auto 5px auto;
 }
