--- a/admincp/templates/admincp/base.html
+++ b/admincp/templates/admincp/base.html
@@ -32,7 +32,7 @@
     <h2 id="title-container">{% block title %}{% endblock %}</h2>
     <div id="nav-bar">
     	<a href="{% url 'admincp:index' %}" />Index</a> |
-    	<a href="{% url 'admincp:review' %}" />Review Products</a>
+    	<a href="{% url 'admincp:revenue' %}" />Revenue</a>
     </div>
         {% block content %}{% endblock %}
     </div>
