--- a/thuzioapp/static/thuzioapp/css/cart.css
+++ b/thuzioapp/static/thuzioapp/css/cart.css
@@ -1,7 +1,26 @@
 #shopping-cart-container {
 	margin-bottom: 50px;
+	width: 100%;
+	margin: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-align: center;
+}
+
+#shopping-cart-container img {
+	width: 300px;
+	height: 200px;
 }
 
 .membership-price {
 	display: none;
+}
+
+#current-total {
+	text-align: center;
+	font-weight: bold;
+}
+
+#cart-footer form {
+	text-align: center;
 }
