--- a/thuzioapp/templates/thuzioapp/cart.html
+++ b/thuzioapp/templates/thuzioapp/cart.html
@@ -35,16 +35,17 @@
 		<div class="product-total"></div>
 		<hr>
 	</div>
-	
-	<div id="current-total"></div>
-
-	<form action="{% url 'thuzioapp:checkout' %}">
-		<input type="submit" value="Checkout Order">
-	</form>
 
 	{% empty %}
 	<h3 id="empty">Your cart is currently empty. Buy stuff!</h3>
 	{% endfor %}
+</div>
+
+<div id='cart-footer'>
+	<div id="current-total"></div>
+	<form action="{% url 'thuzioapp:checkout' %}">
+		<input type="submit" value="Checkout Order">
+	</form>
 </div>
 
 {% endblock %}
